fix: wrap links in teg li

--- a/source/styles/sections/feedback.scss
+++ b/source/styles/sections/feedback.scss
@@ -137,6 +137,10 @@
         color: #FFFFFF;
         cursor: pointer;
     }
+    &:focus {
+      outline: none;
+    }
+
   }
   .next {
     background: #F53838;
