--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -31,7 +31,7 @@
   .authorisation {
       width: 24rem;
   }
-  .authorisation__signIN {
+  .authorisation__sign-in {
     margin-right: 1rem;
     padding: 6px;
     font: 500 1.6rem "Rubik", sans-serif;
@@ -49,7 +49,7 @@
   }
   
 
-  .authorisation__signUP {
+  .authorisation__sign-up {
     @include transparent-btn;
   }
  
